--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^14.2.0",
     "express": "~4.16.1",
     "express-validator": "^6.14.0",
+    "formidable": "^2.0.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
