--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "devStart": "nodemon app.js --watch"
+    "dev": "nodemon app.js --watch"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
